# rayband-voice-cam

./: .camera_cache.json  .gitattributes  .gitignore  LICENSE  README.md  audio.py  config.py  face_detect.py  finger_detect.py  main.py  pyproject.toml  requirements.txt  setup.py  simple_vosk_test.py  test_detector.py  test_microphone.py  video.py
docs/: rayband_bom_raspberry_pi_build
docs/hardware/: README.md  rayband_bom_raspberry_pi_build.md
rayband/: __init__.py
rayband/cli/: __init__.py  main.py
rayband/core/: __init__.py  audio.py  camera.py  face_detection.py  finger_detection.py
rayband/hardware/: __init__.py
rayband/utils/: __init__.py  command_router.py  config.py  file_utils.py
schematics/rayband-ultra-glasses/: rayband-ultra-glasses.kicad_prl  rayband-ultra-glasses.kicad_pro  rayband-ultra-glasses.kicad_sch
schematics/transiever/: rayband-ultra-glasses.kicad_pro  rayband-ultra-glasses.kicad_sch  sym-lib-table
scripts/: setup_model.py  test_hardware.py
tests/: __init__.py  test_basic.py
