[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rayband-voice-cam"
version = "1.0.0"
description = "Voice-controlled camera system for smart glasses"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "RayBand Team", email = "team@rayband.dev"},
]
keywords = ["computer-vision", "speech-recognition", "smart-glasses", "opencv", "vosk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "opencv-python>=4.8.0",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "vosk>=0.3.45",
    "dlib>=19.24.0",
    "mediapipe>=0.10.0",
    "face_recognition>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/SoloScriptSage/rayband-voice-cam"
Repository = "https://github.com/SoloScriptSage/rayband-voice-cam"
Issues = "https://github.com/SoloScriptSage/rayband-voice-cam/issues"

[project.scripts]
rayband = "rayband.cli.main:main"
rayband-test = "scripts.test_hardware:main"
rayband-setup = "scripts.setup_model:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rayband*", "scripts*"]

[tool.setuptools.package-data]
rayband = ["hardware/components/*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
